--- a/Baha'i/Others/ROB/V2/p001-028Ch01.html
+++ b/Baha'i/Others/ROB/V2/p001-028Ch01.html
@@ -308,6 +308,7 @@
        <td VALIGN=top><small><center><a name="p18">18</a></center><p>
 	   * There are innumerable prophecies in Islám, Judaism and Christianity which indicate the date of this event as 1844, the year of the Báb's declaration.<p>
 	   † The Declaration of the Báb was on the evening of 5 Jamádíyu'l-Avval, 1260 A.H. (22 May 1844), but at present in the East, the anniversary of this festival is celebrated according to the lunar calendar.<p>
+<!--Lunar or Solar? -->
 	   ‡ This is the same Muhammad-'Alíy-i-Isfahání referred to in vol. 1, p. <a href="../V1/p283-293Ch17.html#p287">287</a>. See also p. <a href="p370-387Ch17.html">370</a> below.<p>
 	   </small></td>
 </tr>
