--- a/Baha'i/Others/ROB/V2/p236-269Ch11.html
+++ b/Baha'i/Others/ROB/V2/p236-269Ch11.html
@@ -436,7 +436,7 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
        <td></td>
        <td VALIGN=top><small><center><a name="p260">260</a></center><p>
 	   * Literally 'Friend', a designation by which Abraham is known in Islám.<p>
-	   ‡ He later became the arch-enemy of 'Abdu'l-Bahá and the arch-breaker of the Covenant of Bahá'u'lláh.<p>
+	   † He later became the arch-enemy of 'Abdu'l-Bahá and the arch-breaker of the Covenant of Bahá'u'lláh.<p>
 	   ‡ Bahá'u'lláh especially sent for these two brothers to come from Persia. They attained His presence and recognized their own folly and misjudgement.<p>
 	   § See p. <a href="p171-193Ch08.html#p181">181</a>.<p>
 	   <hr>
@@ -532,7 +532,7 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
        <td VALIGN=top><small><center><a name="p266">266</a></center><p>
 	   * Muslim priests wore turbans; the greater the turban, the more important the priest. Jamál during his Bahá'í career did not discard his turban and priestly attire.<p>
 	   † Muslims showed great respect towards the priests who used to display their hands for the public to kiss. Bahá'u'lláh has forbidden the kissing of hands.<p>
-	   ‡ Mírzá Mihdí, the youngest brother of 'Abdu'l-Bahá who later died in 'Akká. His death is regarded by Bahá'u'lláh as His own sacrifice. We shall refer later to this illustrious son in the <a href="../V3/p467-483Index.html#Mihdí,Mírzá">next volume</a>.
+	   ‡ Mírzá Mihdí, the youngest brother of 'Abdu'l-Bahá, who later died in 'Akká. His death is regarded by Bahá'u'lláh as His own sacrifice. We shall refer later to this illustrious son in the <a href="../V3/p467-483Index.html#Mihdí,Mírzá">next volume</a>.
 	   </small></td>
 </tr>
 <tr>
