--- a/Baha'i/Others/ROB/V4/p239-256Ch17.html
+++ b/Baha'i/Others/ROB/V4/p239-256Ch17.html
@@ -105,7 +105,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p243">243</a></center><p>
 	   * Persian men usually wore long garments over which they tied a wide shawl around their waist.<p>
-	   † It was a custom among the Persians to choose at random a number of beads, and by counting them n a certain manner determine which course of action would be best to follow in a given situation. (A.T.)
+	   † It was a custom among the Persians to choose at random a number of beads, and by counting them in a certain manner determine which course of action would be best to follow in a given situation. (A.T.)
 	   </small></td>
 </tr>
 <tr>
