--- a/Baha'i/Baha/EW/p001-182.html
+++ b/Baha'i/Baha/EW/p001-182.html
@@ -227,6 +227,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	These words have streamed from the pen of this Wronged One in one of His Tablets: "The purpose of the one true God, exalted be His glory, hath been to bring forth the Mystic Gems out of the mine of man--they Who are the Dawning-Places of His Cause and the Repositories of the pearls of His knowledge; for, God Himself, glorified be He, is the Unseen, the One concealed and hidden from the eyes of men. Consider what the Merciful hath revealed in the Qur'án: No vision taketh in Him, but He taketh in all vision, and He is the Subtile, the All-Informed!"
 	</td>
 	<td VALIGN=top><small>
+	["The Purpose of..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#CXXXII">CXXXII</a><p>
 	["No vision taketh in Him..."] <i>The Kitáb-i-Íqán</i>, <a href="../KI/p095-258.html#para3">p. 98</a>, <a href="../KI/p095-258.html#para81">p. 170</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -237,7 +238,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	["That the diverse communities..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p368-390Ch24.html#p375">p. 375</a>
+	["That the diverse communities..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#CXXXII">CXXXII</a>, <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p368-390Ch24.html#p375">p. 375</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -258,7 +259,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	["Ye are the fruits of one tree..."] Lawh-i-Mánikchí Sáhib, <i>The Revelation of Bahá'u'lláh</i> vol. 3, <a href="../../Others/ROB/V3/p253-274Ch12.html#p270">p. 270</a>; vol. 4, p. <a href="../../Others/ROB/V4/p190-204Ch13.html#p196">196</a>, <a href="../../Others/ROB/V4/p368-390Ch24.html#p375">375</a>.<p>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#GLLawh-i-MánikchíSáhib">'Ye are the fruits of one tree...'</a>]<p>
 	["So powerful is the light of unity..."] <i>Gleanings</i>, <a href="../GL/p003-346.html#para590">CXXXII</a>, <i>The Revelation of Bahá'u'lláh</i> vol. 4. p. <a href="../../Others/ROB/V4/p190-204Ch13.html#p196">196</a>, <a href="../../Others/ROB/V4/p368-390Ch24.html#p375">375</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -268,7 +269,8 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	Exert yourselves that ye may attain this transcendent and most sublime station, the station that can insure the protection and security of all mankind. This goal excelleth every other goal, and this aspiration is the monarch of all aspirations. So long, however, as the thick clouds of oppression, which obscure the daystar of justice, remain undispelled, it would<a name="p15"/> be difficult for the glory of this station to be unveiled to men's eyes. These thick clouds are the exponents of idle fancies and vain imaginings, who are none other but the divines of Persia. At one time We spoke in the language of the lawgiver; at another in that of the truth-seeker and the mystic, and yet Our supreme purpose and highest wish hath always been to disclose the glory and sublimity of this station. God, verily, is a sufficient witness!
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#para591">CXXXII</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">15</DIV></center></small></td>
 </tr>
@@ -278,7 +280,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	["Consort with all men..."] <i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p368-390Ch24.html#p375">p. 375</a>.<p>
+	["Consort with all men..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#para592">CXXXII</a>, <i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p368-390Ch24.html#p375">p. 375</a>.<p>
 	["A kindly tongue..."] <i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p368-390Ch24.html#p376">p. 376</a>.	
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -1411,10 +1413,11 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 </tr>
 <tr>
 	<td><a name="para135"></a>
-	"O thou who hast gone astray! Thou hast neither seen Me, nor associated with Me, nor been My companion for the fraction of a moment. How is it, then, that thou hast bidden men to curse Me? Didst thou, in this, follow the promptings of thine own desires, or didst thou obey thy Lord? Produce thou a sign, if thou art one of the truthful. We testify that thou hast cast behind thy back the Law of God, and laid hold on the dictates of thy passions. Nothing, in truth, escapeth His knowledge; He, verily, is the Incomparable, the All-Informed. O heedless one! Hearken unto that which the Merciful hath revealed in the Qur'án: 'Say not to every one who meeteth you with a greeting, "Thou art not a believer."' Thus hath He decreed in Whose grasp are the kingdoms of Revelation and of creation, if thou be of them that hearken. Thou hast set aside the commandment of God, and clung unto the promptings of thine own desire. Woe, then, unto thee, O careless one that doubtest! If thou deniest Me, by what proof canst thou vindicate the truth of that which thou dost possess? Produce it, then, O thou who hast joined<a name="p83"/> partners with God, and turned aside from His sovereignty that hath encompassed the worlds!
+	"O thou who hast gone astray! Thou hast neither seen Me, nor associated with Me, nor been My companion for the fraction of a moment. How is it, then, that thou hast bidden men to curse Me? Didst thou, in this, follow the promptings of thine own desires, or didst thou obey thy Lord? Produce thou a sign, if thou art one of the truthful. We testify that thou hast cast behind thy back the Law of God, and laid hold on the dictates of thy passions. Nothing, in truth, escapeth His knowledge; He, verily, is the Incomparable, the All-Informed. O heedless one! Hearken unto that which the Merciful hath revealed in the Qur'án: 'Say not to every one who meeteth you with a greeting, "Thou art not a believer."' <small><sup>1</sup></small> Thus hath He decreed in Whose grasp are the kingdoms of Revelation and of creation, if thou be of them that hearken. Thou hast set aside the commandment of God, and clung unto the promptings of thine own desire. Woe, then, unto thee, O careless one that doubtest! If thou deniest Me, by what proof canst thou vindicate the truth of that which thou dost possess? Produce it, then, O thou who hast joined<a name="p83"/> partners with God, and turned aside from His sovereignty that hath encompassed the worlds!
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    1. Qur'án <a href="../../../CLUI/UnifiedIndex.html#Qur'án4:96">4:96</a>.<p>
 	["O thou who hast gone astray!..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p001-270TOB.html#para576">p. 207</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p091-102Ch06.html#p92">p. 92</a>
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">83</DIV></center></small></td>
