--- a/Baha'i/Baha/GL/Contents.html
+++ b/Baha'i/Baha/GL/Contents.html
@@ -49,13 +49,16 @@
 	   </td>
 </tr>
 </table>
+
 <tt>
+
 <center><b><h1>TABLE OF CONTENTS</h1></b>
 <small>(by Covenant Library)</small>
 </center><br>
 
 <table align="CENTER" border="0" cellspacing="2" cellpadding="2" height="100" width="97%" bgcolor="">
 <tr>
+       <td></td>
        <td></td>
        <td><small><i><center>page</center></i></small></td>
 </tr>
@@ -66,6 +69,7 @@
        		<span class="text-span">Introduction</span>
        </div>
 	   </td>
+       <td></td>
        <td><small><div align="right"><a href="Introduction.html">v</a></div></small></td>
 </tr>
 <tr>
@@ -89,6 +93,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#IX">IX</a></div></small></td>
+       <td><small><div align="right">12</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -98,6 +103,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XI">XI</a></div></small></td>
+       <td><small><div align="right">14</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -107,6 +113,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XIII">XIII</a></div></small></td>
+       <td><small><div align="right">17</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -116,6 +123,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XVI">XVI</a></div></small></td>
+       <td><small><div align="right">39</div></small></td>
 </tr>
 <tr>
 	<td>
@@ -134,6 +142,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XIX">XIX</a></div></small></td>
+       <td><small><div align="right">46</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -143,6 +152,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XXI">XXI</a></div></small></td>
+       <td><small><div align="right">49</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -152,6 +162,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XXII">XXII</a></div></small></td>
+       <td><small><div align="right">50</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -161,6 +172,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XXIV">XXIV</a></div></small></td>
+       <td><small><div align="right">59</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -170,6 +182,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XXXIII">XXXIII</a></div></small></td>
+       <td><small><div align="right">76</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -179,6 +192,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XXXVII">XXXVII</a></div></small></td>
+       <td><small><div align="right">86</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -188,6 +202,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XXXVIII">XXXVIII</a></div></small></td>
+       <td><small><div align="right">87</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -197,6 +212,17 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XXXIX">XXXIX</a></div></small></td>
+       <td><small><div align="right">88</div></small></td>
+</tr>
+<tr>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><i>The Hidden Words</i> Persian #77</span>
+       </div>
+	   </td>
+       <td><small><div align="right"><a href="p003-346.html#XLII">XLII</a></div></small></td>
+       <td><small><div align="right">91</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -206,6 +232,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XLIII">XLIII</a></div></small></td>
+       <td><small><div align="right">92</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -214,7 +241,8 @@
        		<span class="text-span"><i>Lawh-i-Siráj</i></span>
        </div>
 	   </td>
-       <td><small><div align="right"><a href="p003-346.html#I">I</a></div></small></td>
+       <td><small><div align="right"><a href="p003-346.html#L">L</a></div></small></td>
+       <td><small><div align="right">103</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -224,6 +252,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LII">LII</a></div></small></td>
+       <td><small><div align="right">104</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -233,6 +262,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LIII">LIII</a></div></small></td>
+       <td><small><div align="right">107</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -242,6 +272,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LV">LV</a></div></small></td>
+       <td><small><div align="right">109</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -251,6 +282,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LVI">LVI</a></div></small></td>
+       <td><small><div align="right">110</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -260,6 +292,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LVII">LVII</a></div></small></td>
+       <td><small><div align="right">111</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -269,6 +302,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LX">LX</a></div></small></td>
+       <td><small><div align="right">117</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -278,6 +312,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LXII">LXII</a></div></small></td>
+       <td><small><div align="right">119</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -287,6 +322,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LXIII">LXIII</a></div></small></td>
+       <td><small><div align="right">120</div></small></td>
 </tr>
 
 <tr>
@@ -297,6 +333,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LXIV">LXIV</a></div></small></td>
+       <td><small><div align="right">121</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -306,6 +343,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LXV">LXV</a></div></small></td>
+       <td><small><div align="right">122</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -315,6 +353,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LXVI">LXVI</a></div></small></td>
+       <td><small><div align="right">125</div></small></td>
 </tr>
 <tr>
 	<td>
@@ -333,6 +372,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LXX">LXX</a></div></small></td>
+       <td><small><div align="right">136</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -342,6 +382,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LXXI">LXXI</a></div></small></td>
+       <td><small><div align="right">137</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -351,6 +392,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LXXII">LXXII</a></div></small></td>
+       <td><small><div align="right">139</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -360,6 +402,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LXXIII">LXXIII</a></div></small></td>
+       <td><small><div align="right">140</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -369,6 +412,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LXXV">LXXV</a></div></small></td>
+       <td><small><div align="right">143</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -378,6 +422,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LXXVII">LXXVII</a></div></small></td>
+       <td><small><div align="right">149</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -387,6 +432,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LXXIX">LXXIX</a></div></small></td>
+       <td><small><div align="right">151</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -396,6 +442,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LXXXI">LXXXI</a></div></small></td>
+       <td><small><div align="right">155</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -405,6 +452,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LXXXIII">LXXXIII</a></div></small></td>
+       <td><small><div align="right">164</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -414,6 +462,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#LXXXIX">LXXXIX</a></div></small></td>
+       <td><small><div align="right">175</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -423,6 +472,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XC">XC</a></div></small></td>
+       <td><small><div align="right">177</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -432,6 +482,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XCI">XCI</a></div></small></td>
+       <td><small><div align="right">179</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -441,6 +492,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XCVII">XCVII</a></div></small></td>
+       <td><small><div align="right">197</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -450,6 +502,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XCVIII">XCVIII</a></div></small></td>
+       <td><small><div align="right">198</div></small></td>
 </tr>
 <tr>
 	<td>
@@ -468,6 +521,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#XCIX">XCIX</a></div></small></td>
+       <td><small><div align="right">200</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -477,6 +531,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#C">C</a></div></small></td>
+       <td><small><div align="right">200</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -486,6 +541,17 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CIII">CIII</a></div></small></td>
+       <td><small><div align="right">207</div></small></td>
+</tr>
+<tr>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><i>The Hidden Words</i> Persian #63</span>
+       </div>
+	   </td>
+       <td><small><div align="right"><a href="p003-346.html#CIV">CIV</a></div></small></td>
+       <td><small><div align="right">209</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -495,6 +561,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CV">CV</a></div></small></td>
+       <td><small><div align="right">210</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -504,6 +571,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CVI">CVI</a></div></small></td>
+       <td><small><div align="right">213</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -513,6 +581,17 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CIX">CIX</a></div></small></td>
+       <td><small><div align="right">214</div></small></td>
+</tr>
+<tr>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><i>Lawh-i-Maqsúd</i></span>
+       </div>
+	   </td>
+       <td><small><div align="right"><a href="p003-346.html#CX">CX</a></div></small></td>
+       <td><small><div align="right">215</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -522,6 +601,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXII">CXII</a></div></small></td>
+       <td><small><div align="right">218</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -531,6 +611,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXIII">CXIII</a></div></small></td>
+       <td><small><div align="right">219</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -540,6 +621,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXIV">CXIV</a></div></small></td>
+       <td><small><div align="right">232</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -549,6 +631,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXV">CXV</a></div></small></td>
+       <td><small><div align="right">240</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -558,6 +641,17 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXVI">CXVI</a></div></small></td>
+       <td><small><div align="right">246</div></small></td>
+</tr>
+<tr>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span"><i>Lawh-i-Maqsúd</i></span>
+       </div>
+	   </td>
+       <td><small><div align="right"><a href="p003-346.html#CXVII">CXVII</a></div></small></td>
+       <td><small><div align="right">249</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -567,6 +661,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXVIII">CXVIII</a></div></small></td>
+       <td><small><div align="right">250</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -576,6 +671,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXIX">CXIX</a></div></small></td>
+       <td><small><div align="right">253</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -585,6 +681,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXX">CXX</a></div></small></td>
+       <td><small><div align="right">254</div></small></td>
 </tr>
 <tr>
 	<td>
@@ -599,10 +696,21 @@
 	   <td>
 	   <div class="dot-div"></div>
        <div class="text-div">
+       		<span class="text-span"><i>Lawh-i-Maqsúd</i></span>
+       </div>
+	   </td>
+       <td><small><div align="right"><a href="p003-346.html#CXXII">CXXII</a></div></small></td>
+       <td><small><div align="right">259</div></small></td>
+</tr>
+<tr>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
        		<span class="text-span"><i>Tablet to Mírzá Hádí-i-Qazvíní, 15th Letter of the Living</i></span>
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXXIV">CXXIV</a></div></small></td>
+       <td><small><div align="right">261</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -612,6 +720,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXXV">CXXV</a></div></small></td>
+       <td><small><div align="right">264</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -621,6 +730,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXXVII">CXXVII</a></div></small></td>
+       <td><small><div align="right">272</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -630,6 +740,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXXXV">CXXXV</a></div></small></td>
+       <td><small><div align="right">291</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -639,6 +750,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXXXVI">CXXXVI</a></div></small></td>
+       <td><small><div align="right">294</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -648,6 +760,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXXXIX">CXXXIX</a></div></small></td>
+       <td><small><div align="right">302</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -657,6 +770,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXL">CXL</a></div></small></td>
+       <td><small><div align="right">305</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -666,6 +780,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXLII">CXLII</a></div></small></td>
+       <td><small><div align="right">308</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -675,6 +790,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXLVII">CXLVII</a></div></small></td>
+       <td><small><div align="right">316</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -684,6 +800,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CXLVIII">CXLVIII</a></div></small></td>
+       <td><small><div align="right">317</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -693,6 +810,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CLII">CLII</a></div></small></td>
+       <td><small><div align="right">322</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -702,6 +820,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CLIII">CLIII</a></div></small></td>
+       <td><small><div align="right">323</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -711,6 +830,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CLIV">CLIV</a></div></small></td>
+       <td><small><div align="right">329</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -720,6 +840,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CLV">CLV</a></div></small></td>
+       <td><small><div align="right">330</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -729,6 +850,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CLVIII">CLVIII</a></div></small></td>
+       <td><small><div align="right">335</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -738,6 +860,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CLIX">CLIX</a></div></small></td>
+       <td><small><div align="right">335</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -747,6 +870,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CLX">CLX</a></div></small></td>
+       <td><small><div align="right">336</div></small></td>
 </tr>
 <tr>
 	   <td>
@@ -756,6 +880,7 @@
        </div>
 	   </td>
        <td><small><div align="right"><a href="p003-346.html#CLXVI">CLXVI</a></div></small></td>
+       <td><small><div align="right">346</div></small></td>
 </tr>
 <tr>
 	   <td>&nbsp;</td>
@@ -768,6 +893,7 @@
        		<span class="text-span">GLOSSARY AND NOTES</span>
        </div>
 	   </td>
+       <td></td>
        <td><small><div align="right"><a href="GlossaryAndNotes.html">347</a></div></small></td>
 </tr>
 <tr>
@@ -777,6 +903,7 @@
        		<span class="text-span">INDEX</span>
        </div>
 	   </td>
+       <td></td>
        <td><small><div align="right"><a href="Index.html">353</a></div></small></td>
 </tr>
 
