--- a/Baha'i/Baha/TOB/p001-270TOB.html
+++ b/Baha'i/Baha/TOB/p001-270TOB.html
@@ -2303,6 +2303,8 @@
 	</td>
 	<td VALIGN=top><small>
 	1. A village near Isfáhán.
+    <hr>
+    ["Of all the tributes..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#para20">p. 10</a>
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">78</DIV></center><p></small></td>
 </tr>
@@ -2518,6 +2520,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    ["It behooveth you..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#para330">p. 167</a><p>
 	["The Evil One is..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p329-350Ch22.html#p340">p. 340</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">87</DIV></center><p></small></td>
@@ -3452,7 +3455,8 @@
 	is union and concord amongst the children of men. From the beginning of time the light of unity hath shed its divine radiance upon the world, and the greatest means for the promotion of that unity is for the peoples of the world to understand one another's writing and speech. In former Epistles We have enjoined upon the Trustees of the House of Justice either to choose one language from among those now existing or to adopt a new one, and in like manner to select a common script, both of which should be taught in all the schools of the world. Thus will the earth be regarded as one country and one home. The most glorious fruit of the tree of knowledge is this exalted word: Of one tree are all ye the fruit, and of one bough the leaves. Let not man glory in this that he loveth his country, let him rather glory <a name="p128"/>in this that he loveth his kind. Concerning this We have previously revealed that which is the means of the reconstruction of the world and the unity of nations. Blessed are they that attain thereunto. Blessed are they that act accordingly.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    [CLUI: "Of one tree are all ye the fruit..." / <a href="../../../CLUI/UnifiedIndex.html#GLLawh-i-MánikchíSáhib">"Ye are the fruits of one tree..."</a>]
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">128</DIV></center><p></small></td>
 </tr>
@@ -4452,7 +4456,7 @@
 	Man is the supreme Talisman. Lack of a proper education hath, however, deprived him of that which he doth inherently possess. Through a word proceeding out of the <a name="p162"/>mouth of God he was called into being; by one word more he was guided to recognize the Source of his education; by yet another word his station and destiny were safeguarded. The Great Being saith: Regard man as a mine rich in gems of inestimable value. Education can, alone, cause it to reveal its treasures, and enable mankind to benefit therefrom. If any man were to meditate on that which the Scriptures, sent down from the heaven of God's holy Will, have revealed, he would readily recognize that their purpose is that all men shall be regarded as one soul, so that the seal bearing the words 'The Kingdom shall be God's' may be stamped on every heart, and the light of Divine bounty, of grace, and mercy may envelop all mankind. The One true God, exalted be His glory, hath wished nothing for Himself. The allegiance of mankind profiteth Him not, neither doth its perversity harm Him. The Bird of the Realm of Utterance voiceth continually this call: 'All things have I willed for thee, and thee, too, for thine own sake.' If the learned and worldly-wise men of this age were to allow mankind to inhale the fragrance of fellowship and love, every understanding heart would apprehend the meaning of true liberty, and discover the secret of undisturbed peace and absolute composure. Were the earth to attain this station and be illumined with its light it could then be truly said of it: 'Thou shall see in it no hollows or rising hills.' <sup><small>1</small></sup>
 	</td>
 	<td VALIGN=top><small>
-	1. Qur'án 20:106.
+	1. Qur'án <a href="../../../CLUI/UnifiedIndex.html#Qur'án20:106">20:106</a>.
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">162</DIV></center><p></small></td>
 </tr>
@@ -4484,7 +4488,7 @@
 	<hr>
 	<i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#CXII">CXII</a><p>
 	["O well-beloved ones!..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p190-204Ch13.html#p196">p. 196</a><p>
-	["Ye are the fruits of one tree..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p253-274Ch12.html#p270">p. 270</a><p>
+	[CLUI: <a href="../../../CLUI/UnifiedIndex.html#GLLawh-i-MánikchíSáhib">'Ye are the fruits of one tree...'</a>]<p>
 	["The structure of world stability..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p275-307Ch13.html#p294">p. 294</a><p>
 	["Justice hath a mighty force..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p275-307Ch13.html#p295">p. 295</a><p>
 	</small></td>
@@ -4504,7 +4508,8 @@
 	The Great Being, wishing to reveal the prerequisites of the peace and tranquility of the world and the advancement of its peoples, hath written: The time must come when the imperative necessity for the holding of a vast, an all-embracing assemblage of men will be universally realized. The rulers and kings of the earth must needs attend it, and, participating in its deliberations, must consider such ways and means as will lay the foundations of the world's Great Peace amongst men. Such a peace demandeth that the Great Powers should resolve, for the sake of the tranquility of the peoples of the earth, to be fully reconciled among themselves. Should any king take up arms against another, all should unitedly arise and prevent him. If this be done, the nations of the world will no longer require any armaments, except for the purpose of preserving the security of their realms and of maintaining internal order within their territories. This will ensure the peace and composure of every people, government and nation. We fain would hope that the kings and rulers of the earth, the mirrors of the gracious and almighty name of God, may attain unto this station, and shield mankind from the onslaught of tyranny.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	[principle of collective security] <i>The Kitáb-i-Aqdas</i>, <a href="../KA/p165-251Notes.html#note173">Note 173</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -5485,7 +5490,7 @@
 	O thou who hast gone astray! Thou hast neither seen Me, nor associated with Me, nor been My companion for the fraction of a moment. How is it, then, that thou hast bidden men to curse Me? Didst thou, in this, follow the promptings of thine own desires, or didst thou obey thy Lord? Produce thou a sign, if thou art one of the truthful. We testify that thou hast cast behind thy back the Law of God, and laid hold on the dictates of thy passions. Nothing, in truth, escapeth His knowledge; He, verily, is the Incomparable, the All-Informed. O heedless one! Hearken unto that which the Merciful hath revealed in the Qur'án: 'Say not to every one who meeteth you with a greeting, "Thou art not a believer."' <sup><small>1</small></sup> Thus hath He decreed in Whose grasp are the kingdoms of Revelation and of creation, if thou be of them that hearken. Thou hast set aside the commandment of God, and clung unto the promptings of thine own desire. Woe, then, unto thee, O careless one that doubtest! If thou deniest Me, by what proof canst thou vindicate the truth of that which thou dost possess? Produce it, then, O thou who hast joined partners with God, and turned aside from His sovereignty that hath encompassed the worlds!
 	</td>
 	<td VALIGN=top><small>
-	1. Qur'án 4:96.
+	1. Qur'án <a href="../../../CLUI/UnifiedIndex.html#Qur'án4:96">4:96</a>.
 	<hr>
 	<i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para135">p. 82</a><p>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p091-102Ch06.html#p92">p. 92</a>
@@ -5558,7 +5563,9 @@
 	O Báqir! Read and call thou to mind that which was said of old by a believer of thy stock: 'Will ye slay a man because he saith my Lord is God, when He hath already come to you with signs from your Lord? If he be a liar, on him will be his lie, but if he be a man of truth, part of what he threateneth will fall upon you. In truth God guideth not him who is a transgressor, a liar.' <sup><small>1</small></sup>
 	</td>
 	<td VALIGN=top><small>
-	1. Qur'án 40:29.
+	1. Qur'án <a href="../../../CLUI/UnifiedIndex.html#Qur'án40:29">40:29</a>.
+    <hr>
+    ["Will ye slay a man..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#para444">p. 221</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
