--- a/Baha'i/Baha/HiddenWords.html
+++ b/Baha'i/Baha/HiddenWords.html
@@ -1290,6 +1290,7 @@
 	   <blockquote>Know, verily, that an unforeseen calamity followeth you, and grievous retribution awaiteth you. Think not that which ye have committed hath been effaced in My sight.  By My beauty!  All your doings hath My pen graven with open characters upon tablets of chrysolite.</blockquote> 	   
 	   </td>
        <td VALIGN=top><small><center><a name="persian63">Persian #63</a></center><p>
+       <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="GL/p003-346.html#CIV">CIV</a><p> 
 	   <i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../Others/ROB/V1/p071-083Ch06.html#p80">p. 80</a></small>
 	   </td>
 	   <td></td>
@@ -1413,6 +1414,7 @@
 	   <blockquote>In the night-season the beauty of the immortal Being hath repaired from the emerald height of fidelity unto the '<span style="background-color: #ffffCC" TITLE="The name of a tree planted at the end of a road to serve as a guide; a symbol of a Manifestation.">Sadratu'l-Muntahá</span>', and wept with such a weeping that the concourse on high and the dwellers of the realms above wailed at His lamenting.  Whereupon there was asked, Why the wailing and weeping?  He made reply: As bidden I waited expectant upon the hill of faithfulness, yet inhaled not from them that dwell on earth the fragrance of fidelity.  Then summoned to return I beheld, and lo! certain doves of holiness were sore tried within the claws of the dogs of earth.  Thereupon the Maid of heaven hastened forth unveiled and resplendent from Her mystic mansion, and asked of their names, and all were told but one.  And when urged, the first letter thereof was uttered, whereupon the dwellers of the celestial chambers rushed forth out of their habitation of glory.  And whilst the second letter was pronounced they fell down, one and all, upon the dust.  At that moment a voice was heard from the inmost shrine: "Thus far and no farther."  Verily We bear witness to that which they have done and now are doing.</blockquote>
 	   </td>
        <td VALIGN=top><small><center><a name="persian77">Persian #77</a></center><p>
+       <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="GL/p003-346.html#XLII">XLII</a><p>
 	   <i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../Others/ROB/V1/p071-083Ch06.html#p83">p. 83</a></small>
 	   </td>
        <td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">50</DIV></center><p></small></td>
