--- a/Baha'i/Others/ROB/V3/p253-274Ch12.html
+++ b/Baha'i/Others/ROB/V3/p253-274Ch12.html
@@ -301,7 +301,7 @@ changed Mullá Sádiq-Khurásání to Mullá Sádiq-i-Khurásání to match The 
        <td width="70%">
 	   <b><i>Lawh-i-Mánikchí Sáhib</i></b><p>
 	   Mánikchí passed through Baghdád on his way to Persia when Bahá'u'lláh was in that city. He attained His presence there and became His admirer. In later years he maintained friendly contact with Bahá'u'lláh through correspondence. He was assisted in this by Mírzá Abu'l-Fadl, who after embracing the Faith worked as a secretary for Mánikchí for some years. In answer to a letter, Bahá'u'lláh revealed a Tablet for him known as the <i>Lawh-i-Mánikchí Sáhib</i>.<small><sup>10</sup></small> This is mainly revealed in pure Persian,* for the latter was keen to promote the Persian language in its original form. Although Mánikchí did not become a Bahá'í, he remained a sympathetic friend.<p>
-	   From the literary point of view, the Tablet of Bahá'u'lláh to Mánikchí Sáhib is a masterpiece of the pure Persian language. In its lucidity and eloquence, its richness and beauty, it is no less outstanding than other celebrated Tablets revealed either in Arabic or Persian. This Tablet contains some of the choicest utterances of Bahá'u'lláh. The celebrated passage, 'Ye are the fruits of one tree and the leaves of one branch', was revealed in this Tablet.† Bahá'u'lláh here invites the peoples of the world to enter the portals to freedom which have been opened wide through His Revelation, and to drink deep from the springs of knowledge which have welled forth from His utterances. He uses the analogy of an eyelid, a small shutter, which can obstruct the vision, to illustrate that the veil of covetousness can likewise obscure the light of the soul. He likens harsh 
+	   From the literary point of view, the Tablet of Bahá'u'lláh to Mánikchí Sáhib is a masterpiece of the pure Persian language. In its lucidity and eloquence, its richness and beauty, it is no less outstanding than other celebrated Tablets revealed either in Arabic or Persian. This Tablet contains some of the choicest utterances of Bahá'u'lláh. The celebrated passage, 'Ye are the fruits of one tree and the leaves of one branch', was revealed in this Tablet.† Bahá'u'lláh here invites the peoples of the world to enter the portals to freedom which have been opened wide through His Revelation, and to drink deep from the springs of knowledge which have welled forth from His utterances. He uses the analogy of an eyelid, a small shutter, which can obstruct the vision, to illustrate that the veil of covetousness can likewise obscure the light of the soul. He likens harsh
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p270">270</a></center><p>
@@ -309,6 +309,8 @@ changed Mullá Sádiq-Khurásání to Mullá Sádiq-i-Khurásání to match The 
 	   † This famous passage is to be found also in the <a href="../../../Baha/TOB/p001-270TOB.html#para469"><i>Ishráqát</i></a>.<p>
 	   <hr>
 	   10. <i>Majmú'iy-i-Alváh</i>, p. 259.
+       <hr>
+       [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#GLLawh-i-MánikchíSáhib">'Ye are the fruits of one tree...'</a>]
 	   </small></td>
 </tr>
 <tr>
