--- a/Baha'i/Others/ROB/V4/p190-204Ch13.html
+++ b/Baha'i/Others/ROB/V4/p190-204Ch13.html
@@ -124,7 +124,8 @@
 	   8. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#para590">CXXXII</a>.<p>
 	   9. Lawh-i-Maqsúd, <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para469">p. 164</a>.
 	   <hr>
-	   ["O well-beloved ones!..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#CXII">CXII</a> 
+	   ["O well-beloved ones!..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#CXII">CXII</a><p>
+       [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#GLLawh-i-MánikchíSáhib">'Ye are the fruits of one tree...'</a>]   
 	   </small></td>
 </tr>
 <tr>
