--- a/Baha'i/Others/ROB/V4/p368-390Ch24.html
+++ b/Baha'i/Others/ROB/V4/p368-390Ch24.html
@@ -180,6 +180,8 @@
 	   9. <a href="../../../Baha/EW/p001-182.html#para21"><i>ibid</i></a>.<p>
 	   10. <a href="../../../Baha/EW/p001-182.html#para21"><i>ibid</i></a>.<p>
 	   11. <i>ibid</i>. <a href="../../../Baha/EW/p001-182.html#para23">p. 15</a>.
+       <hr>
+       [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#GLLawh-i-MánikchíSáhib">'Ye are the fruits of one tree...'</a>]  
 	   </small></td>
 </tr>
 <tr>
